--- a/ChoresForCoinsiOS/Main.storyboard
+++ b/ChoresForCoinsiOS/Main.storyboard
@@ -1528,6 +1528,7 @@
                                         <state key="normal" title="Done"/>
                                         <connections>
                                             <action selector="done:" destination="QtQ-q5-P19" eventType="touchUpInside" id="ScG-0W-3Lz"/>
+                                            <segue destination="D8g-l4-6cB" kind="unwind" unwindAction="unwindToChildListWithSegue:" id="g4x-ck-yYD"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -1814,6 +1815,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4B2-Qh-rMT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="D8g-l4-6cB" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1951" y="223"/>
         </scene>
