--- a/ChoresForCoinsiOS/Main.storyboard
+++ b/ChoresForCoinsiOS/Main.storyboard
@@ -97,7 +97,7 @@
                                                     <rect key="frame" x="138.66666666666666" y="11" width="97.666666666666657" height="65"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xcy-c5-vPi">
-                                                            <rect key="frame" x="1.6666666666666856" y="0.0" width="94.666666666666671" height="65"/>
+                                                            <rect key="frame" x="10" y="0.0" width="94.666666666666671" height="65"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="Xcy-c5-vPi" secondAttribute="height" multiplier="54:37" id="Ivf-nb-aEU"/>
                                                             </constraints>
@@ -105,9 +105,9 @@
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
+                                                        <constraint firstItem="Xcy-c5-vPi" firstAttribute="leading" secondItem="12A-iw-xMY" secondAttribute="leading" constant="10" id="7ub-yT-nTL"/>
                                                         <constraint firstItem="Xcy-c5-vPi" firstAttribute="height" secondItem="12A-iw-xMY" secondAttribute="height" id="Qe9-ft-gPZ"/>
                                                         <constraint firstItem="Xcy-c5-vPi" firstAttribute="centerY" secondItem="12A-iw-xMY" secondAttribute="centerY" id="Uba-hD-0EA"/>
-                                                        <constraint firstItem="Xcy-c5-vPi" firstAttribute="centerX" secondItem="12A-iw-xMY" secondAttribute="centerX" id="trv-2M-a6M"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -2439,7 +2439,7 @@
                                 <rect key="frame" x="337" y="101" width="30" height="30"/>
                                 <state key="normal" title="Edit"/>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q44-lQ-i2t">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q44-lQ-i2t">
                                 <rect key="frame" x="0.0" y="196.33333333333337" width="375" height="178.66666666666663"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hYV-4I-qf2" userLabel="ChoreNameView">
@@ -2618,6 +2618,7 @@
                                         </state>
                                         <connections>
                                             <action selector="markComplete:" destination="6dG-q3-qFR" eventType="touchUpInside" id="BrT-tO-sPh"/>
+                                            <segue destination="qhd-Nu-lX1" kind="presentation" identifier="takePictureSegue" id="ypq-8S-cvD"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -2834,6 +2835,9 @@
                                         <state key="normal" title="TAKE PICTURE" backgroundImage="btnOrange_L">
                                             <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="takePictureBtn:" destination="qhd-Nu-lX1" eventType="touchUpInside" id="l7q-LL-Wyx"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -2960,6 +2964,8 @@
                         <viewLayoutGuide key="safeArea" id="SND-6o-v3F"/>
                     </view>
                     <connections>
+                        <outlet property="coinAmtLabel" destination="Icj-xH-Lr3" id="cJn-Zy-Jkh"/>
+                        <outlet property="usernameLabel" destination="BAb-Up-N4G" id="H8o-E7-BVX"/>
                         <segue destination="q0I-az-h0x" kind="presentation" identifier="toCoinFromTakePhoto" id="0Cp-zN-Xa7"/>
                     </connections>
                 </viewController>
@@ -3372,7 +3378,7 @@
         <segue reference="6S7-b7-Z4r"/>
         <segue reference="mSl-Ec-VBM"/>
         <segue reference="q0e-xW-FaS"/>
-        <segue reference="Yia-uk-i10"/>
-        <segue reference="7DE-Oe-Cje"/>
+        <segue reference="0Cp-zN-Xa7"/>
+        <segue reference="3RF-ku-Rgp"/>
     </inferredMetricsTieBreakers>
 </document>
