fixed display name issue to be merged

--- a/ChoresForCoinsiOS/Main.storyboard
+++ b/ChoresForCoinsiOS/Main.storyboard
@@ -3370,7 +3370,7 @@
         <segue reference="6S7-b7-Z4r"/>
         <segue reference="bm7-WQ-ArU"/>
         <segue reference="q0e-xW-FaS"/>
-        <segue reference="0Cp-zN-Xa7"/>
-        <segue reference="3RF-ku-Rgp"/>
+        <segue reference="0dr-E4-ccy"/>
+        <segue reference="HOK-Pp-4Xx"/>
     </inferredMetricsTieBreakers>
 </document>
